{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 121,
  "lineage": "debed682-b8af-2a9b-07b9-c91c1047cd15",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:vpc/vpc-0977ca86c1e50d5c7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07d331857e626e57e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0220fad9fbb49c2c7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0977ca86c1e50d5c7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bb5859aee40d043e",
            "owner_id": "285729811195",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_alb_catalogue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allowing port number 80 from catalogue",
            "from_port": 80,
            "id": "sgrule-524328616",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0258f62db2431de38",
            "security_group_rule_id": "sgr-03fa96b0f9ed8eeb6",
            "self": false,
            "source_security_group_id": "sg-02ed23fcd90316423",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.app_alb_sg.aws_security_group.example_sg",
            "module.catalogue_sg.aws_security_group.example_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_alb_vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allowing port number 22 from vpn",
            "from_port": 80,
            "id": "sgrule-1255937533",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0258f62db2431de38",
            "security_group_rule_id": "sgr-008c32ea16817ce0b",
            "self": false,
            "source_security_group_id": "sg-01534ce90190eea8f",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "data.aws_vpc.default",
            "module.app_alb_sg.aws_security_group.example_sg",
            "module.vpn_sg.aws_security_group.example_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_alb_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allowing port number 80 from web",
            "from_port": 80,
            "id": "sgrule-1863077297",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0258f62db2431de38",
            "security_group_rule_id": "sgr-070b641e51230276b",
            "self": false,
            "source_security_group_id": "sg-0c16ae69b4ea32048",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.app_alb_sg.aws_security_group.example_sg",
            "module.web_sg.aws_security_group.example_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "catalogue_app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allowing port number 8080 from app alb",
            "from_port": 8080,
            "id": "sgrule-1311695802",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-02ed23fcd90316423",
            "security_group_rule_id": "sgr-0212844ff141285ea",
            "self": false,
            "source_security_group_id": "sg-0258f62db2431de38",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.app_alb_sg.aws_security_group.example_sg",
            "module.catalogue_sg.aws_security_group.example_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "catalogue_vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-297350940",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-02ed23fcd90316423",
            "security_group_rule_id": "sgr-09baf8016da29dce4",
            "self": false,
            "source_security_group_id": "sg-01534ce90190eea8f",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "data.aws_vpc.default",
            "module.catalogue_sg.aws_security_group.example_sg",
            "module.vpn_sg.aws_security_group.example_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongodb_catalogue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 27017,
            "id": "sgrule-792069943",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-028309d3912210305",
            "security_group_rule_id": "sgr-0786ff96a0bbec546",
            "self": false,
            "source_security_group_id": "sg-02ed23fcd90316423",
            "timeouts": null,
            "to_port": 27017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.catalogue_sg.aws_security_group.example_sg",
            "module.mongodb_sg.aws_security_group.example_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongodb_vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1932103861",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-028309d3912210305",
            "security_group_rule_id": "sgr-0440947e7314c1994",
            "self": false,
            "source_security_group_id": "sg-01534ce90190eea8f",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "data.aws_vpc.default",
            "module.mongodb_sg.aws_security_group.example_sg",
            "module.vpn_sg.aws_security_group.example_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "223.185.132.45/32"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1283869902",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-01534ce90190eea8f",
            "security_group_rule_id": "sgr-0013ff6dd3238025d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "data.http.myip",
            "module.vpn_sg.aws_security_group.example_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allowing port number 22 from vpn",
            "from_port": 22,
            "id": "sgrule-735855899",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0c16ae69b4ea32048",
            "security_group_rule_id": "sgr-0100bd4738cd5f3ba",
            "self": false,
            "source_security_group_id": "sg-01534ce90190eea8f",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "data.aws_vpc.default",
            "module.vpn_sg.aws_security_group.example_sg",
            "module.web_sg.aws_security_group.example_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_web_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allowing port number 80 from web_alb",
            "from_port": 80,
            "id": "sgrule-413074606",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0c16ae69b4ea32048",
            "security_group_rule_id": "sgr-03505fa2418ff19ae",
            "self": false,
            "source_security_group_id": "sg-030e8138778ffc237",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.web_alb_sg.aws_security_group.example_sg",
            "module.web_sg.aws_security_group.example_sg"
          ]
        }
      ]
    },
    {
      "module": "module.app_alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:security-group/sg-0258f62db2431de38",
            "description": "allowing traffic web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0258f62db2431de38",
            "ingress": [],
            "name": "app_alb",
            "name_prefix": "",
            "owner_id": "285729811195",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "app",
              "Environment": "DEV",
              "Name": "Roboshop-app_alb",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "app",
              "Environment": "DEV",
              "Name": "Roboshop-app_alb",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b3511d793dc2fd3"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.catalogue_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:security-group/sg-02ed23fcd90316423",
            "description": "allowing traffic from VPN,web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ed23fcd90316423",
            "ingress": [],
            "name": "catalogue",
            "name_prefix": "",
            "owner_id": "285729811195",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "catalogue",
              "Environment": "DEV",
              "Name": "Roboshop-catalogue",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "catalogue",
              "Environment": "DEV",
              "Name": "Roboshop-catalogue",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b3511d793dc2fd3"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.mongodb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:security-group/sg-028309d3912210305",
            "description": "allowing traffic from VPN,catalogue and user",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028309d3912210305",
            "ingress": [],
            "name": "mongodb",
            "name_prefix": "",
            "owner_id": "285729811195",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "mongodb",
              "Environment": "DEV",
              "Name": "Roboshop-mongodb",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "mongodb",
              "Environment": "DEV",
              "Name": "Roboshop-mongodb",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b3511d793dc2fd3"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:security-group/sg-01534ce90190eea8f",
            "description": "allowing all ports from my home ip",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01534ce90190eea8f",
            "ingress": [],
            "name": "vpn_sg",
            "name_prefix": "",
            "owner_id": "285729811195",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "VPN",
              "Environment": "DEV",
              "Name": "Roboshop-vpn_sg",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "VPN",
              "Environment": "DEV",
              "Name": "Roboshop-vpn_sg",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0977ca86c1e50d5c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.web_alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:security-group/sg-030e8138778ffc237",
            "description": "allowing traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030e8138778ffc237",
            "ingress": [],
            "name": "web_alb",
            "name_prefix": "",
            "owner_id": "285729811195",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "web",
              "Environment": "DEV",
              "Name": "Roboshop-web_alb",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "web",
              "Environment": "DEV",
              "Name": "Roboshop-web_alb",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b3511d793dc2fd3"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.web_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:security-group/sg-0c16ae69b4ea32048",
            "description": "allowing traffic from VPN,public alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c16ae69b4ea32048",
            "ingress": [],
            "name": "web",
            "name_prefix": "",
            "owner_id": "285729811195",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "web",
              "Environment": "DEV",
              "Name": "Roboshop-web",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Component": "web",
              "Environment": "DEV",
              "Name": "Roboshop-web",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b3511d793dc2fd3"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    }
  ]
}